feat: create Profile/StoreController
